# Video-sCM

./: .gitignore  main.py  pyproject.toml  requirements.txt
fastvideo/dataset/: latent_datasets.py
fastvideo/models/mochi_hf/: mochi_latents_utils.py
fastvideo/utils/: checkpoint.py  load.py  loadtest.py
flash_attn_scm/: flash_attn_interface_scm.py
flash_attn_scm7/: flash_attn_interface_scm.py
video-sana/: distill.py  distill_scm.py  distill_wan.py
video-sana/models/scm_model/: test_wan_scm.py  wan_scm.py  wan_scm2.py
video-sana/models/wan/modules/: model.py
video_sana/: distill.py  distill_scm.py  distill_scm_acc.py  distill_scm_adv.py  distill_wan.py  train_scm.py
video_sana/diffusion/: __init__.py
video_sana/diffusion/utils/: import_utils.py
video_sana/infer_scripts/: inference_sana_sprint.py  wan_infer.py  wan_scm_infer.py
video_sana/models/scm_model/: test_wan_scm.py  wan_scm.py
video_sana/models/scm_model/modules/: attention.py  attentiontest.py  ladd_wan.py
video_sana/models/wan/: __init__.py  scm_t2v.py  text2video.py
video_sana/models/wan/modules/: model.py
video_sana/train_scripts/: distill_wan.sh  distill_wan_adv.sh  distill_wan_scm.sh  train_scm_ladd.py
