[project]
name = "video-sana-sprint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diffusers==0.32.2",
    "matplotlib==3.10.1",
    "mmcv==1.7.2",
    "swanlab==0.5.0",
    "transformers==4.46.1",
    "wandb==0.19.7",
    "webdataset>=0.2.111",
    "torch==2.3.0",
    "torchaudio==2.3.0",
    "torchvision==0.18.0",
    "accelerate==1.4.0",
    "addict==2.4.0",
    "aiohappyeyeballs==2.4.6",
    "aiohttp==3.11.12",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.8.0",
    "asttokens==3.0.0",
    "attrs==25.1.0",
    "backcall==0.2.0",
    "beautifulsoup4==4.13.3",
    "bleach==6.2.0",
    "blinker==1.9.0",
    "boto3==1.36.26",
    "botocore==1.36.26",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "contourpy==1.3.1",
    "cos-python-sdk-v5==1.9.34",
    "crcmod==1.7",
    "cycler==0.12.1",
    "dashscope==1.22.1",
    "decorator==4.4.2",
    "decord==0.6.0",
    "defusedxml==0.7.1",
    "distvae==0.0.0b5",
    "docker-pycreds==0.4.0",
    "docopt==0.6.2",
    "e==1.4.5",
    "easydict==1.13",
    "einops==0.8.1",
    "executing==2.2.0",
    "fastapi==0.115.8",
    "fastjsonschema==2.21.1",
    "filelock==3.17.0",
    "flask==3.1.0",
    "fonttools==4.56.0",
    "frozenlist==1.5.0",
    "fsspec==2025.2.0",
    "ftfy==6.3.1",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "h11==0.14.0",
    "huggingface-hub==0.29.1",
    "idna==3.10",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "importlib-metadata==8.6.1",
    "iniconfig==2.0.0",
    "ipdb==0.13.13",
    "ipython==8.12.3",
    "ipython-pygments-lexers==1.1.1",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.5",
    "jmespath==1.0.1",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "jupyterlab-pygments==0.3.0",
    "kiwisolver==1.4.8",
    "lazy-loader==0.4",
    "liger-kernel==0.3.1",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mistune==3.1.3",
    "mmengine==0.10.7",
    "moviepy==1.0.3",
    "mpmath==1.3.0",
    "msgpack==1.1.0",
    "multidict==6.1.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "networkx==3.4.2",
    "ninja==1.11.1.3",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "optimum-quanto>=0.2.2",
    "opencv-python==4.11.0.86",
    "packaging==24.2",
    "pandas==2.2.3",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "peewee==3.17.9",
    "peft==0.14.0",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "pillow==10.4.0",
    "pipreqs==0.5.0",
    "platformdirs==4.3.6",
    "pluggy==1.5.0",
    "proglog==0.1.10",
    "prompt-toolkit==3.0.50",
    "propcache==0.3.0",
    "protobuf==5.29.3",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyav==14.2.1",
    "pycryptodome==3.21.0",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pygments==2.19.1",
    "pynvml==12.0.0",
    "pyparsing==3.2.3",
    "pysocks==1.7.1",
    "pytest==8.3.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2025.1",
    "pyyaml==6.0.2",
    "pyzmq==26.3.0",
    "ray==2.42.1",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rich==13.9.4",
    "rpds-py==0.23.1",
    "s3transfer==0.11.3",
    "safetensors==0.5.3",
    "scikit-image==0.25.2",
    "scipy==1.15.2",
    "sentencepiece==0.2.0",
    "sentry-sdk==2.22.0",
    "setproctitle==1.3.5",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "stack-data==0.6.3",
    "starlette==0.45.3",
    "swanboard==0.1.8b1",
    "swankit==0.1.6",
    "sympy==1.13.1",
    "termcolor==2.5.0",
    "tifffile==2025.2.18",
    "timm==1.0.15",
    "tinycss2==1.4.0",
    "tokenizers==0.20.3",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "ujson==5.10.0",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "werkzeug==3.1.3",
    "xfuser==0.4.1",
    "xmltodict==0.14.2",
    "yapf==0.43.0",
    "yarg==0.1.9",
    "yarl==1.18.3",
    "yunchang==0.6.0",
    "zipp==3.21.0",
]

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-gpu" },
]
torchaudio = [
  { index = "pytorch-gpu" },
]
torchvision = [
  { index = "pytorch-gpu" },
]